<resources>
    <string name="app_name">Tabخty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_app">Welcome to\n  Tabخty</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t Have an Account ?</string>
    <string name="signup">SignUp</string>
    <string name="today_random_meal">Today\'s Random Meal:</string>
    <string name="search">Search</string>
    <string name="selection_of_meals_for_cozy_day">Selection of meals for cozy day:</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="country">Dishes :</string>
    <string name="instructions">Instructions :</string>
    <string name="ingredients">Ingredients</string>
    <string name="logout">Logout</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="warningMessage">Are you sure you want to delete this favourite meal ?</string>
    <string name="delete">Delete</string>
    <string name="welcomeCalendar">What’s cooking today? Check your Calendar! 🍳</string>
    <string name="homeWelcome">Your journey to better eating starts here. 🌱</string>
    <string name="searchMenu">Search</string>
    <string name="welcomeProfile">Hey Chef, your profile is looking as good as your meals! 😋</string>
    <string name="loginScren_login">Login</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="tab_ty">Tabخty</string>
    <string name="go_as_a_guest">Go as a guest</string>
    <string name="goToFav">Go to Favourites</string>
    <string name="noInternetMessage">OOPS ! it seems your Internet connection is lost</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="countryChip">Country</string>
    <string name="client_id">642063047197-sdbja5usokslu78hdeg7mftup91t0s44.apps.googleusercontent.com</string>
    <string name="registerBtn">Register</string>
    <string name="search_by_category_hint">Search by category</string>
    <string name="search_by_meal_hint">Search by meal</string>
    <string name="welcomeMeal">Here is your chosen detailed meal !</string>
    <string name="welcomeFavourite">Here is your chosen Favourite meals ! 😋</string>
    <string name="welcomeHeader">Welcome to Tabخty Where all your dream meals come true !</string>
    <string name="meal_category">Category :</string>
    <string name="backup">Backup</string>
    <string name="go_to_calendar">Go to Calendar</string>
</resources>