<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/logout"
          android:id="@+id/menuLogout"
          android:icon="@drawable/logout"/>

    <item android:title="@string/favourite"
          android:icon="@drawable/favourite"
          android:id="@+id/menuFavourite"
        />

    <item android:title="@string/profile"
          android:id="@+id/menuProfile"
          android:icon="@drawable/profile"/>

    <item android:title="@string/calendar"
          android:id="@+id/menuCalendar"
          android:icon="@drawable/calendar"/>

    <item android:title="@string/home"
        android:id="@+id/menuHome"
        android:icon="@drawable/home"/>
    <item android:title="@string/searchMenu"
        android:id="@+id/menuSearch"
        android:icon="@drawable/search"/>

</menu>