<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.view.SearchFragment">

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/corner_radius"
        android:drawableStart="@drawable/search"
        android:inputType="text"
        android:paddingStart="10dp"
        android:focusable="true"
        android:hint="@string/search_by_category_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toEndOf="@+id/searchMenuBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/searchMenuBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/menu"
        android:backgroundTint="@color/Primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/categoryChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:backgroundTint="@color/Secondary"
            android:text="@string/category"
            android:textAlignment="center"
            android:textColor="@color/onSecondary"
            android:textSize="18sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ingredientChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Secondary"
            android:text="@string/ingredient"
            android:textAlignment="center"
            android:textColor="@color/onSecondary"
            android:textSize="18sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/countryChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Secondary"
            android:text="@string/countryChip"
            android:textAlignment="center"
            android:textColor="@color/onSecondary"
            android:textSize="18sp" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="557dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>