<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    tools:context=".signup.view.SignUpFragment">


    <EditText
        android:id="@+id/emailTextRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/onPrimary"
        android:drawableStart="@drawable/email"
        android:hint=" Email"
        android:padding="16dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabtyText" />

    <EditText
        android:id="@+id/passwordTextRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/onPrimary"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint=" Password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextRegister" />

    <EditText
        android:id="@+id/confirmPasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/onPrimary"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint=" Confirm Password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/haveAccount_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextRegister" />

    <TextView
        android:id="@+id/haveAccount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/onPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordText" />


    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/onSurface"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordText"
        app:layout_constraintStart_toEndOf="@+id/haveAccount_tv"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="502dp" />

    <TextView
        android:id="@+id/tabtyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_to_app"
        android:textColor="@color/onPrimary"
        android:textSize="50sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailTextRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_marginTop="25dp"
        android:backgroundTint="@color/Tertiary"
        android:text="@string/registerBtn"
        android:textColor="@color/onSurface"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/haveAccount_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>